pre wrap fix

--- a/src/sass/common/_base-html.scss
+++ b/src/sass/common/_base-html.scss
@@ -40,6 +40,7 @@ ul {
 pre {
   @include padding;
   border-radius: $border-radius;
+  white-space: pre-wrap;
 }
 
 .neon--disabled {
