--- a/themes/classic/dark.scss
+++ b/themes/classic/dark.scss
@@ -3,15 +3,15 @@ $background-color: $color-neutral-d5 !default;
 
 $color-text: $color-text-light !default;
 $color-inverse: $color-text-dark !default;
-$color-text-low-contrast: $color-low-contrast-l1 !default;
+$color-text-low-contrast: $color-low-contrast-l2 !default;
 $color-text-neutral: $color-neutral-l1 !default;
-$color-text-high-contrast: $color-high-contrast-l1 !default;
-$color-text-brand: $color-brand-l1 !default;
-$color-text-primary: $color-primary-l1 !default;
-$color-text-info: $color-info-l1 !default;
-$color-text-success: $color-success-l1 !default;
-$color-text-warn: $color-warn-l1 !default;
-$color-text-error: $color-error-l1 !default;
+$color-text-high-contrast: $color-high-contrast-l2 !default;
+$color-text-brand: $color-brand-l2 !default;
+$color-text-primary: $color-primary-l2 !default;
+$color-text-info: $color-info-l2 !default;
+$color-text-success: $color-success-l2 !default;
+$color-text-warn: $color-warn-l2 !default;
+$color-text-error: $color-error-l2 !default;
 
 $background-color-low-contrast: $color-low-contrast-d1 !default;
 $background-color-neutral: $color-neutral-d1 !default;
