--- a/themes/classic/light.scss
+++ b/themes/classic/light.scss
@@ -3,15 +3,15 @@ $background-color: $color-neutral-l4 !default;
 
 $color-text: $color-text-dark !default;
 $color-inverse: $color-text-light !default;
-$color-text-low-contrast: $color-low-contrast-d1 !default;
-$color-text-neutral: $color-neutral-d1 !default;
-$color-text-high-contrast: $color-high-contrast-d1 !default;
-$color-text-brand: $color-brand-d1 !default;
-$color-text-primary: $color-primary-d1 !default;
-$color-text-info: $color-info-d1 !default;
-$color-text-success: $color-success-d1 !default;
-$color-text-warn: $color-warn-d1 !default;
-$color-text-error: $color-error-d1 !default;
+$color-text-low-contrast: $color-low-contrast-d2 !default;
+$color-text-neutral: $color-neutral-d2 !default;
+$color-text-high-contrast: $color-high-contrast-d2 !default;
+$color-text-brand: $color-brand-d2 !default;
+$color-text-primary: $color-primary-d2 !default;
+$color-text-info: $color-info-d2 !default;
+$color-text-success: $color-success-d2 !default;
+$color-text-warn: $color-warn-d2 !default;
+$color-text-error: $color-error-d2 !default;
 
 $background-color-neutral: $color-neutral-l1 !default;
 $background-color-primary: $color-primary-l1 !default;
